# sangria_firmware

./: .gitignore  README.md  directory.txt  requests.txt
documents/: sdl.txt  setup.txt
logo/: sangria_logo3.afdesign
logo/rejection/: sangria_logo.afdesign  sangria_logo2.afdesign
pi_firmware/: setup_sangria.sh
pi_firmware/lcd_driver/: Makefile  sangria_effects.c  sangria_effects.h  sangria_lcd  sangria_lcd.c  sangria_lcd.service  sharp_memory_display_driver.c  sharp_memory_display_driver.h  startup_logo.txt
pi_firmware/sangria_glib/: Makefile  game_demo  image_converter.py  rotate_demo  sangria_demo  sangria_glib.c  sangria_glib.h  sangria_slib.c  sangria_slib.h  scc_emulator.h  sharpikeebo_glib.c  sharpikeebo_slib.h  sound_demo  sound_demo2
pi_firmware/sangria_glib/sample/: game.h  game_demo.c  rotate_demo.c  sangria_demo.c  sound_demo.c  sound_demo2.c  usa.h  (+2 more)
rp2040_firmware/: .gitignore  CMakeLists.txt
rp2040_firmware/doc/: default_keymap.vsdx  oled_layout.vsdx  state.vsdx  ~$$oled_layout.~vsdx
rp2040_firmware/font/: big_ac_power.gal  big_battery_empty_a.gal  big_battery_empty_b.gal  big_battery_full.gal  big_battery_high_a.gal  big_battery_high_b.gal  big_battery_low_a.gal  big_battery_low_b.gal  big_bq_is_not_detect.gal  big_no_power.gal  big_otg_power.gal  big_usb_power.gal  dc_plug.gal  empty.gal  high.gal  keyboard.gal  usb_power.gal
rp2040_firmware/r1_rp2040_fw/: CMakeLists.txt  main.cpp  sangria_firmware_config.h
rp2040_firmware/r3_rp2040_fw/: CMakeLists.txt  battery_level.cpp  battery_level.h  controller.cpp  controller.h  custom_menu.cpp  custom_menu.h  main.cpp  r3_memo.txt  sangria_firmware_config.h
rp2040_firmware/rp2040_drivers/: CMakeLists.txt  sangria_battery.cpp  sangria_battery.h  sangria_flash.cpp  sangria_flash.h  sangria_gps.cpp  sangria_gps.h  sangria_graphic_resource.cpp  sangria_graphic_resource.h  sangria_i2c.h  sangria_jogdial.cpp  sangria_keyboard.cpp  sangria_keyboard.h  sangria_oled.cpp  sangria_oled.h  sangria_usb_keyboard.cpp
rp2040_firmware/tool/: ac_adapter.cpp  ac_power_detect.cpp  ac_power_no_detect.cpp  alt.cpp  arrow0.cpp  arrow1.cpp  arrow10.cpp  arrow11.cpp  arrow12.cpp  arrow13.cpp  arrow14.cpp  arrow15.cpp  arrow2.cpp  arrow3.cpp  arrow4.cpp  arrow5.cpp  arrow6.cpp  arrow7.cpp  arrow8.cpp  arrow9.cpp  battery_000.cpp  battery_020.cpp  battery_040.cpp  battery_060.cpp  battery_080.cpp  battery_100.cpp  big_ac_power.cpp  big_battery_empty_a.cpp  big_battery_empty_b.cpp  big_battery_full.cpp  big_battery_high_a.cpp  big_battery_high_b.cpp  big_battery_low_a.cpp  big_battery_low_b.cpp  big_bq_is_not_detect.cpp  big_no_power.cpp  big_otg_power.cpp  big_usb_power.cpp  charge0.cpp  charge1.cpp  (+25 more)
sangria_firmware/: .gitignore  CMakeLists.txt
sangria_firmware/doc/: default_keymap.vsdx  state.vsdx
sangria_firmware/font/: ac_adapter.gal  alt.gal  big_no_power.gal  big_otg_power.gal  big_usb_power.gal  ctrl.gal  dc_plug.gal  empty.gal  font.gal  full.gal  half.gal  no_battery.gal  shift.gal  sym.gal
sangria_firmware/oled_test_ssd1306/: CMakeLists.txt  main.cpp  sangria_firmware_config.h  sangria_oled.cpp
sangria_firmware/pio_test/: CMakeLists.txt  main.cpp  pio_test.pio
sangria_firmware/r1_rp2040_fw/: main.cpp  r1_memo.txt  sangria_firmware_config.h
sangria_firmware/r3_rp2040_fw/: CMakeLists.txt  main.cpp  sangria_firmware_config.h
sangria_firmware/rp2040_drivers/: sangria_battery.cpp  sangria_battery.h  sangria_graphic_resource.cpp  sangria_graphic_resource.h  sangria_i2c.cpp  sangria_i2c.h  sangria_jogdial.cpp  sangria_jogdial.h  sangria_keyboard.cpp  sangria_keyboard.h  sangria_oled.cpp  sangria_oled.h  sangria_usb_keyboard.cpp  usb_descriptors.c
sangria_firmware/sangria_firmware/: CMakeLists.txt  hidkey_list.txt  main.c  main.cpp  sangria_firmware.c  sangria_firmware.cpp  sangria_firmware_config.h  sangria_graphic_resource.cpp  sangria_graphic_resource.h  sangria_jogdial.cpp  sangria_jogdial.h  sangria_keyboard.cpp  sangria_keyboard.h  sangria_logo.cpp  sangria_memo.txt  sangria_oled.cpp  sangria_oled.h  sangria_usb_keyboard.cpp  sangria_usb_keyboard.h  usb_descriptors.c
sangria_firmware/tool/: big_no_power.cpp  convert.bat  dc_plug.cpp  font.cpp  font_converter.py  half.cpp  image_converter.py  sangria_logo1.cpp  sangria_logo2.cpp  sangria_logo3.cpp  usb_power.cpp
